--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 public/hot
-public/storage
+#public/storage
 storage/*.key
 vendor
 .env
@@ -10,7 +10,7 @@ docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
-yarn-error.log
+#yarn-error.log
 .idea
 .vscode
 composer.lock
